Fixed button width bug on firefox
added width: -moz-fit-content on <a> tag css under width: fix-content for cross-browser compatibility

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -145,6 +145,7 @@ a {
 	text-align: left;
 	padding: .5rem 0;
 	width: fit-content;
+    width: -moz-fit-content;
 	text-decoration: none;
 }
 
